--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -13,10 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-javax.sql.DataSource.ds1.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-javax.sql.DataSource.ds1.dataSource.url=jdbc:postgresql://arjuna.db.elephantsql.com:5432/hebzkbet
-javax.sql.DataSource.ds1.dataSource.user=hebzkbet
-javax.sql.DataSource.ds1.dataSource.password=hNIb6nhqrRSiNhyYXbZVlkQbUFNL5jKY
+javax.sql.DataSource.ds1.dataSourceClassName=${DB_DRIVER}
+javax.sql.DataSource.ds1.dataSource.url=${DB_URL}
+javax.sql.DataSource.ds1.dataSource.user=${DB_USERNAME}
+javax.sql.DataSource.ds1.dataSource.password=${DB_PASSWORD}
 
 # Microprofile server properties
 server.port=8080
